Fix inconsistent spacing around previews

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -12,6 +12,8 @@
 
   --content-max-width: 740px;
   --content-subtitle-max-width: 150px;
+
+  --fluid-gap: clamp(0.75rem, 3vw, 1.5rem)
 }
 
 * {
@@ -110,16 +112,11 @@ main > my-section {
   max-width: calc(var(--content-max-width) + var(--content-subtitle-max-width));
 }
 
-my-preview {
-  display: inline-block;
-  width: 165px;
-  height: 165px;
-}
-
 .previews {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  grid-auto-rows: minmax(160px, 1fr);
+  gap: var(--fluid-gap);
   padding: 0;
   margin: 0;
   margin-bottom: 7rem;
@@ -133,6 +130,13 @@ ul.previews {
 .previews li {
   margin: 0;
   padding: 0;
+}
+
+my-preview {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 1;
 }
 
 section.small.page {
